After game page v_align and colors fixed

--- a/app/static/css/after_game.css
+++ b/app/static/css/after_game.css
@@ -1,11 +1,11 @@
 .statistics {
     font-size: 18px;
-    color: rgb(36, 60, 36);
+    color: rgb(37, 40,57);
 }
 
 .player {
     font-size: 22px;
-    color: rgb(36, 60, 36);
+    color: rgb(37, 40,57);
 }
 
 .empty {
@@ -18,4 +18,10 @@
 
 .title-wrapper {
     margin-bottom: 40px;
+}
+
+.wrapper-section {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
